CREATE TABLE IF NOT EXISTS images (
    id         BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
    directory  VARCHAR(255)    NOT NULL,
    url        VARCHAR(2048)   NOT NULL,
    created_at DATETIME(3)     NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
    PRIMARY KEY (id)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;
